# SeSEproject

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  requirements.txt
api/: example.h  example.py
src/: a.out  cFFT.c  debugger.h  debuggerC  debuggerC.c  exampleHello.c  testFFT.c
test/: debuggercFFT.py  test.py
test/.cache/v/cache/: lastfailed
